--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
+    "react-native-snackbar": "^2.2.3",
     "react-native-vector-icons": "^6.6.0",
     "uuid": "^8.2.0"
   },
