--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.6.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-chart-kit": "^6.2.3",
     "react-native-dropdown-picker": "^3.0.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
@@ -23,6 +24,7 @@
     "react-native-safe-area-context": "^3.0.7",
     "react-native-screens": "^2.9.0",
     "react-native-snackbar": "^2.2.3",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "uuid": "^8.2.0"
   },
